--- a/package.json
+++ b/package.json
@@ -6,9 +6,16 @@
   "private": true,
   "dependencies": {
     "@nx/next": "16.8.1",
+    "@radix-ui/react-dropdown-menu": "^2.0.5",
+    "@radix-ui/react-icons": "^1.3.0",
+    "@swc/helpers": "~0.5.0",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.0.0",
     "next": "13.4.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "tailwind-merge": "^1.14.0",
+    "tailwindcss-animate": "^1.0.7",
     "tslib": "^2.3.0"
   },
   "devDependencies": {
@@ -19,6 +26,8 @@
     "@nx/linter": "16.8.1",
     "@nx/react": "16.8.1",
     "@nx/workspace": "16.8.1",
+    "@swc/cli": "~0.1.62",
+    "@swc/core": "~1.3.51",
     "@testing-library/react": "14.0.0",
     "@types/jest": "^29.4.0",
     "@types/node": "18.14.2",
@@ -26,6 +35,7 @@
     "@types/react-dom": "18.2.6",
     "@typescript-eslint/eslint-plugin": "^5.60.1",
     "@typescript-eslint/parser": "^5.60.1",
+    "autoprefixer": "10.4.13",
     "babel-jest": "^29.4.1",
     "cypress": "^13.0.0",
     "eslint": "~8.46.0",
@@ -40,7 +50,9 @@
     "jest-environment-jsdom": "^29.4.1",
     "nx": "16.8.1",
     "nx-cloud": "latest",
+    "postcss": "8.4.21",
     "prettier": "^2.6.2",
+    "tailwindcss": "3.2.7",
     "ts-jest": "^29.1.0",
     "ts-node": "10.9.1",
     "typescript": "~5.1.3"
