fixed laggy page.tsx component and added pnpm

--- a/libs/common-ui/project.json
+++ b/libs/common-ui/project.json
@@ -1,7 +1,7 @@
 {
   "name": "common-ui",
-  "$schema": "../node_modules/nx/schemas/project-schema.json",
-  "sourceRoot": "common-ui/src",
+  "$schema": "../../node_modules/nx/schemas/project-schema.json",
+  "sourceRoot": "libs/common-ui/src",
   "projectType": "library",
   "tags": [],
   "targets": {
