--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "jest-environment-jsdom": "^29.4.1",
     "nx": "16.8.1",
     "nx-cloud": "latest",
+    "nx-pm2-plugin": "^1.0.5",
     "postcss": "8.4.21",
     "prettier": "^2.6.2",
     "tailwindcss": "3.2.7",
